--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -4,22 +4,28 @@ Title: Convex vs Concave Portfolio Management
 Version: 0.0.9000
 Author: Bernardo Reckziegel
 Maintainer: Bernardo Reckziegel <bernardo_cse@hotmail.com>
-Description: More about what it does (maybe more than one line) Use four
-    spaces when indenting paragraphs within the Description.
+Description: Simulates dynamic strategies for portfolio convex vs. concave
+    management as described in Meucci, Attilio (2010)
+    <doi:10.2139/ssrn.1635982>.
 License: MIT + file LICENSE
 Imports: 
     assertthat (>= 0.2.1),
     dplyr (>= 1.0.7),
+    ffp (>= 0.1.0),
+    forcats (>= 0.5.1),
     ggExtra (>= 0.9),
     ggplot2 (>= 3.3.5),
+    purrr (>= 0.3.4),
     rlang (>= 0.4.11),
     scales (>= 1.1.1),
-    tibble (>= 3.1.3)
+    stringr (>= 1.4.0),
+    tibble (>= 3.1.3),
+    tidyr (>= 1.1.3)
+Suggests: 
+    spelling,
+    testthat (>= 3.0.0)
+Config/testthat/edition: 3
 Encoding: UTF-8
+Language: en-US
 LazyData: true
 RoxygenNote: 7.1.1
-Suggests: 
-    testthat (>= 3.0.0),
-    spelling
-Language: en-US
-Config/testthat/edition: 3
