--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -8,6 +8,8 @@ Description: Simulates dynamic strategies for portfolio convex vs. concave
     management as described in Meucci, Attilio (2010)
     <doi:10.2139/ssrn.1635982>.
 License: MIT + file LICENSE
+URL: https://github.com/Reckziegel/DynamicStrategies
+BugReports: https://github.com/Reckziegel/DynamicStrategies/issues
 Imports: 
     assertthat (>= 0.2.1),
     dplyr (>= 1.0.7),
@@ -22,6 +24,7 @@ Imports:
     tibble (>= 3.1.3),
     tidyr (>= 1.1.3)
 Suggests: 
+    covr,
     spelling,
     testthat (>= 3.0.0)
 Config/testthat/edition: 3
