--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -12,6 +12,7 @@ URL: https://github.com/Reckziegel/DynamicStrategies
 BugReports: https://github.com/Reckziegel/DynamicStrategies/issues
 Imports: 
     assertthat (>= 0.2.1),
+    crayon (>= 1.4.1),
     dplyr (>= 1.0.7),
     ffp (>= 0.1.0),
     forcats (>= 0.5.1),
@@ -22,7 +23,8 @@ Imports:
     scales (>= 1.1.1),
     stringr (>= 1.4.0),
     tibble (>= 3.1.3),
-    tidyr (>= 1.1.3)
+    tidyr (>= 1.1.3),
+    vctrs (>= 0.3.8)
 Suggests: 
     covr,
     spelling,
@@ -31,4 +33,4 @@ Config/testthat/edition: 3
 Encoding: UTF-8
 Language: en-US
 LazyData: true
-RoxygenNote: 7.1.1
+RoxygenNote: 7.1.2
